Fix site on mobile devices?

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,7 @@ $link-color: #285EC9;
 $card-color: #E7E9E7;
 
 :root {
-    --page-width: 50%;
+    --page-width: 30%;
     --header-height: 70px;
     --block-spacing: 20px;
     --page-height: 100%;
@@ -213,5 +213,95 @@ footer {
         font-size: 12px;
         margin: 0;
         margin-top: -3px;
+    }
+}
+
+@media (max-width: 1650px) {
+    :root {
+        --page-width: 50%;
+    }
+}
+@media (max-width: 1360px) {
+    :root {
+        --page-width: 60%;
+    }
+}
+@media (max-width: 1110px) {
+    :root {
+        --page-width: 50%;
+    }
+    .card-container {
+        display: block;
+    }
+    .card-block {
+        display: block;
+        margin-top: var(--block-spacing);
+    }
+    footer .site-name {
+        font-size: 20px;
+    }
+}
+@media (max-width: 900px) {
+    :root {
+        --page-width: 60%;
+    }
+}
+@media (max-width: 750px) {
+    :root {
+        --page-width: 70%;
+    }
+}
+@media (max-width: 650px) {
+    :root {
+        --page-width: 90%;
+    }
+    header nav a {
+        font-size: 17px;
+    }
+}
+@media (max-width: 550px) {
+    header nav a {
+        font-size: 15px;
+        margin-right: 0;
+        i {
+            font-size: 13px;
+        }
+    }
+}
+@media (max-width: 550px) {
+    footer {
+        display: block;
+        .left,
+        .right {
+            display: block;
+        }
+        .right {
+            margin-top: 10px;
+            text-align: center;
+            a {
+                display: inline-block;
+                padding: 0 10px;
+            }
+        }
+    }
+}
+@media (max-width: 450px) {
+    :root {
+        --page-width: 100%;
+    }
+    .block,
+    footer {
+        border-radius: 0;
+    }
+    footer,
+    .page {
+        margin-bottom: 0;
+    }
+    header nav a {
+        margin: 0 3px;
+    }
+    header nav a i {
+        display: none !important;
+        margin: 0;
     }
 }
